RESOLVED FIXED83927
Include the error if we fail to initialize the web process sandbox
https://bugs.webkit.org/show_bug.cgi?id=83927
Summary Include the error if we fail to initialize the web process sandbox
Anders Carlsson
Reported 2012-04-13 11:46:45 PDT
Include the error if we fail to initialize the web process sandbox
Attachments
Patch (1.60 KB, patch)
2012-04-13 11:47 PDT, Anders Carlsson
ap: review+
Anders Carlsson
Comment 1 2012-04-13 11:47:09 PDT
Anders Carlsson
Comment 2 2012-04-13 11:50:36 PDT
Note You need to log in before you can comment on or make changes to this bug.