Include the error if we fail to initialize the web process sandbox https://bugs.webkit.org/show_bug.cgi?id=83927

Reviewed by Alexey Proskuryakov.

* WebProcess/mac/WebProcessMac.mm:
(WebKit::initializeSandbox):

Canonical link: https://commits.webkit.org/101431@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114152 268f45cc-cd09-0410-ab3c-d52691b4dbfc